@@ -53,6 +53,7 @@ Other features
  * FormBuilder class now uses bound methods for field generation, adding custom fields is now easier and documented (LB (Ben Johnston))
  * Added ``WAGTAILADMIN_NOTIFICATION_INCLUDE_SUPERUSERS`` setting to determine whether superusers are included in moderation email notifications (Bruno Alla)
  * Added a basic Dockerfile to the project template (Tom Dyson)
+ * StreamField blocks now allow custom ``get_template`` methods for overriding templates in instances (Christopher Bledsoe)
 
 
 Bug fixes
